--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,23 @@ body {
 	transition: transform 0.2s;
 }
 
+.image-container:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+}
 
+.image-container:hover .overlay{
+	opacity: 1;
+}
 
+.overlay{
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	bottom: 0;
+	transition: 0.5s ease;
+	opacity: 0;
+	font-size: 20px;
+	height: 55px;
 
+}
